<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context="com.uxdesign.ccp_frontend.RegistrarVisitaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imageOjoIng"
            android:layout_width="63dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:contentDescription="Cambiar color"
            android:focusable="true"
            app:srcCompat="@drawable/whiteeye"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="332dp"
            tools:layout_editor_absoluteY="16dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageOjoPor"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/whiteeye"
            android:contentDescription="Ojo superior"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

        <ImageView
            android:id="@+id/imageLogoPeque"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/logo_peque_o"
            android:src="@drawable/logoccppeque"
            android:layout_gravity="center" />

        <LinearLayout
            android:id="@+id/finalizarContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/cuadrado_borde"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <TextView
                android:id="@+id/tituloCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="6dp"
                android:text="@string/cliente"
                android:textColor="@color/blue"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/spinner_borde"
                android:contentDescription="@string/selecciona_uno"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tituloFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="6dp"
                android:hint="@string/fecha"
                android:textColor="@color/blue"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="4dp"
                android:paddingLeft="20dp"
                android:background="@drawable/spinner_borde"
                android:hint="Selecciona una fecha"
                android:focusable="false"
                android:clickable="true"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tituloMotivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="6dp"
                android:text="@string/motivo_visita"
                android:textColor="@color/blue"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerMotivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/spinner_borde"
                android:contentDescription="@string/selecciona_uno"
                android:minHeight="48dp" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonRegistrar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="60dp"
            android:background="@android:color/black"
            android:text="@string/registrar"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>
